# ice-keeper

./: .gitignore  LICENCE.md  Makefile  README.md  ice-keeper  pyproject.toml  python-azure-pipelines.yml  spark.log4j2.properties
config/: ice-keeper.yaml
docs/devs/: DEVELOPERS-FR.md  DEVELOPERS.md
docs/users/: USERS-FR.md  USERS.md
ice_keeper/: __init__.py  __main__.py  catalog.py  config.py  ice_keeper.py  output.py  pool.py  stm.py  zorder_udf.py
ice_keeper/demo/: demo_delete_files_thread_count.py
ice_keeper/spec/: __init__.py  optimization.py  partition_diagnosis_result.py  partition_spec.py  transformation.py  widening_rule.py
ice_keeper/table/: __init__.py  journal.py  journal_entry.py  partition_health.py  schedule.py  schedule_entry.py  storage_inventory_report.py
ice_keeper/task/: __init__.py  discovery.py  mail.py  task.py  task_sequential.py
ice_keeper/task/action/: __init__.py  action.py  config_auditor.py  expiry.py  factory.py  lifecycle.py  orphans.py  rewrite.py
ice_keeper/task/action/optimization/: datafile_summary.py  datafiles_bounds.py  optimization.py  optimization_partition.py  partition_diagnostic.py  partition_summary.py
ice_keeper/templates/: expire_snapshots.sql.j2  journal.sql.j2  partition_health.sql.j2  rewrite_manifests.sql.j2  schedule.sql.j2
tests/: conftest.py  test_common.py  utils.py
tests/config/: email_notification.html.j2  ice-keeper.yaml  lifecycle_data.sql.j2  logging_config.yaml  remove_orphan_files.sql.j2  rewrite_data_files.sql.j2
tests/integration/: conftest.py  test_config_auditor.py  test_data_files_summary.py  test_delete_empty_dirs.py  test_discovery.py  test_expire.py  test_lifecycle.py  test_optimize.py  test_optimize_dynamic_grouping.py  test_optimize_gen_stmt.py  test_orphan.py  test_partition_diagnosis.py  test_properties.py  test_rewrite.py  test_shared_locations.py  test_widening.py  test_zorder_udf.py
tests/unit/: test_config.py  test_config_auditor.py  test_discovery_task.py  test_email.py  test_ice_keeper.py  test_parse_interval.py  test_reset_journal.py  test_reset_partition_health.py  test_reset_schedule.py  test_zorder.py
