[project]
name = "ice-keeper"
version = "0.0.1"
description = ""
authors = [{ name = "cccs-jc", email = "jean-claude.cote@cyber.gc.ca" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "humanfriendly==10.0",
  "pyiceberg[pyarrow]>=0.10.0,<0.11.0",
  "click>=8.2.1,<9.0.0",  
  "sqlparse",
  "numpy",
  "pandas",
  "jinja2==3.1.6",
  "PyYAML",
  "envsubst==0.1.5"
  ]


[project.optional-dependencies]
# Define a group (e.g., 'spark') for the heavy stuff
spark = [
    "pyspark>=3.5.0,<4.0.0",
]

[project.scripts]
ice-keeper = "ice_keeper.ice_keeper:main"

[tool.uv]
# Use operating system’s trust store
native-tls = true

[dependency-groups]
dev = [
  "ruff==0.14.0",
  "pytest>=9.0.3,<10.0.0",
  "mypy==1.15.0",
  "pytest-env>=1.1.5,<2.0.0",
  "pyspark>=3.5.0,<4.0.0",
  "build",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
env = [
    "ICEKEEPER_CONFIG = ./tests/config/ice-keeper.yaml"
]
markers = [
    "integration: Integration tests",
    "email: Email generation tests",
]

[tool.ruff]
line-length = 130
target-version = "py310"
exclude = [ 
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # missing-trailing-comma
    "COM819",  # prohibited-trailing-comma
    "D100",    # undocumented-public-module
    "D101",    # undocumented-public-class
    "D102",    # undocumented-public-method
    "D103",    # undocumented-public-function
    "D104",    # undocumented-public-package
    "D106",    # undocumented-public-nested-class
    "D107",    # undocumented-public-init
    "D203",    # one-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "D406",    # new-line-after-section-name
    "D407",    # dashed-underline-after-section
    "D413",    # blank-line-after-last-section
    "ERA001",  # commented-out-code
    "E203",    # whitespace-before-punctuation
    "E501",    # line-too-long
    "PERF203", # try-except-in-loop
    "PLR0913", # too-many-arguments
    "RUF012",  # mutable-class-default
    "S101",    # assert
    "S301",    # suspicious-pickle-usage
    "S608",    # hardcoded-sql-expression
 #   "TC",      # flake8-type-checking: flag imports used only for type checking
    "TRY",     # tryceratops: should be enabled if we decide to enforce application/custom exceptions
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "PLR2004", # magic-value-comparison
    "SLF001", # private-member-access
    "T201",   # print
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
no_implicit_optional = true
namespace_packages = false
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true
files = ["ice_keeper/", "tests/"]

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fsspec.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "adlfs.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlparse.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "humanfriendly.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyiceberg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "envsubst.*"
ignore_missing_imports = true
